# songy

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  build_for_release.sh  prepare_for_search.sh
src/: i18n.rs  langs.rs  main.rs
