[package]
name = "songy"
version = "1.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["clock"] }
clap = { version = "4.1.4", features = ["derive"] }
frankenstein = "0.23"
reqwest = { version = "0.11.18", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
config-file = "0.2.3"
serde = "1.0.188"
